--- a/CourseRegistration.Data/CourseRegistration.Data.csproj
+++ b/CourseRegistration.Data/CourseRegistration.Data.csproj
@@ -46,7 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="CourseContext.cs" />
+    <Compile Include="CourseRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
