--- a/CourseRegistration.Data/CourseRegistration.Data.csproj
+++ b/CourseRegistration.Data/CourseRegistration.Data.csproj
@@ -46,8 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseRepository.cs" />
     <Compile Include="CourseContext.cs" />
     <Compile Include="CourseRepository.cs" />
+    <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
