--- a/CourseRegistration.Models/CourseRegistration.Models.csproj
+++ b/CourseRegistration.Models/CourseRegistration.Models.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseModel.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="Company.cs" />
     <Compile Include="CompanyHR.cs" />
