--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 *.suo
 /CourseRegistrationSystem/bin
 /CourseRegistrationSystem/obj
+/CourseRegistration.Data/bin
+/CourseRegistration.Data/obj
+/CourseRegistration.Models/bin
+/CourseRegistration.Models/obj
+
