--- a/CourseRegistrationSystem/CourseRegistrationSystem.csproj
+++ b/CourseRegistrationSystem/CourseRegistrationSystem.csproj
@@ -230,6 +230,13 @@
     <Compile Include="Areas\CourseAdmin\CourseAdmin.Master.designer.cs">
       <DependentUpon>CourseAdmin.Master</DependentUpon>
     </Compile>
+    <Compile Include="Areas\CourseAdmin\WebForm1.aspx.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Areas\CourseAdmin\WebForm1.aspx.designer.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Areas\SystemAdmin\CourseAdminManagement\CourseAdminDetail.aspx.cs">
       <DependentUpon>CourseAdminDetail.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -282,6 +289,7 @@
     <Content Include="Areas\CourseAdmin\RegistrationManagement\RegistrationList.aspx" />
     <Content Include="Areas\CourseAdmin\RegistrationManagement\RegistrationMoving.aspx" />
     <Content Include="Areas\CourseAdmin\ResetPwdForIRH&amp;HR.aspx" />
+    <Content Include="Areas\CourseAdmin\WebForm1.aspx" />
     <Content Include="Areas\SystemAdmin\CourseAdminManagement\CourseAdminDetail.aspx" />
     <Content Include="Areas\SystemAdmin\CourseAdminManagement\CourseAdminList.aspx" />
     <Content Include="Areas\SystemAdmin\SystemAdminHomePage.aspx" />
