--- a/CourseRegistrationSystem/CourseRegistrationSystem.csproj
+++ b/CourseRegistrationSystem/CourseRegistrationSystem.csproj
@@ -354,6 +354,7 @@
     <Content Include="Views\Home\Courses.cshtml" />
     <Content Include="Views\Class\Index.cshtml" />
     <Content Include="Views\Course\CourseList.cshtml" />
+    <Content Include="Web.sitemap" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
