--- a/CourseRegistration.BLL/CourseRegistration.BLL.csproj
+++ b/CourseRegistration.BLL/CourseRegistration.BLL.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InstructorBLL.cs" />
     <Compile Include="CategoryBLL.cs" />
     <Compile Include="CourseClassBLL.cs" />
     <Compile Include="CompanyBLL.cs" />
