--- a/CourseRegistrationSystem/Web.config
+++ b/CourseRegistrationSystem/Web.config
@@ -18,6 +18,23 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+
+    <siteMap defaultProvider="XmlSiteMapProvider" enabled="true">
+
+      <providers>
+
+        <add name="XmlSiteMapProvider"
+
+            description="SiteMap provider which reads in .sitemap XML files."
+
+            type="System.Web.XmlSiteMapProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"
+
+            siteMapFile="web.sitemap"/>
+
+      </providers>
+
+    </siteMap>
+    
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
