--- a/CourseRegistration.BLL/CourseRegistration.BLL.csproj
+++ b/CourseRegistration.BLL/CourseRegistration.BLL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ParticipantBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrationBLL.cs" />
+    <Compile Include="UnitOfWorkHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CourseRegistration.Data\CourseRegistration.Data.csproj">
