--- a/CourseRegistrationSystem/CourseRegistrationSystem.csproj
+++ b/CourseRegistrationSystem/CourseRegistrationSystem.csproj
@@ -294,6 +294,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\course1.jpg" />
+    <Content Include="images\course2.jpg" />
+    <Content Include="images\course3.jpg" />
     <Content Include="images\logo128.png" />
     <Content Include="images\logo32.png" />
     <Content Include="Scripts\bootstrap.js" />
