--- a/CourseRegistration.Data/CourseRegistration.Data.csproj
+++ b/CourseRegistration.Data/CourseRegistration.Data.csproj
@@ -53,6 +53,7 @@
     <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitOfWork.cs" />
+    <Compile Include="UnitOfWorkHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CourseRegistration.Models\CourseRegistration.Models.csproj">
