Adding Email & Transaction Scope for Creating User

--- a/CourseRegistrationSystem/Web.config
+++ b/CourseRegistrationSystem/Web.config
@@ -17,6 +17,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    
+	<add key="SmtpClient" value="smtp.gmail.com" />
+	<add key="mailAccount" value="nus.iss.courseregsys@gmail.com" />
+	<add key="mailPassword" value="no-reply" />
   </appSettings>
   <system.web>
 
