integrate identity with business dbcontext & update domain model to v0.4

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\CourseRegistration.BLL\packages.config" />
   <repository path="..\CourseRegistration.Data\packages.config" />
+  <repository path="..\CourseRegistration.Models\packages.config" />
   <repository path="..\CourseRegistrationSystem\packages.config" />
 </repositories>
