--- a/CourseRegistrationSystem/CourseRegistrationSystem.csproj
+++ b/CourseRegistrationSystem/CourseRegistrationSystem.csproj
@@ -267,6 +267,9 @@
     <Compile Include="Areas\SystemAdmin\SystemAdminHomePage.aspx.designer.cs">
       <DependentUpon>SystemAdminHomePage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Areas\User\Controllers\CompanyController.cs" />
+    <Compile Include="Areas\User\Controllers\IndividualController.cs" />
+    <Compile Include="Areas\User\UserAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ClassController.cs" />
     <Compile Include="Controllers\CourseController.cs" />
@@ -320,6 +323,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\CourseAdmin\CourseAdmin.Master" />
     <Content Include="Areas\SystemAdmin\SystemAdmin.Master" />
+    <Content Include="Areas\User\Views\web.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap-datepicker.js" />
     <Content Include="Scripts\bootstrap-datepicker.min.js" />
@@ -443,9 +447,14 @@
     <Content Include="Views\Instructor\Index.cshtml" />
     <Content Include="Views\Instructor\Details.cshtml" />
     <Content Include="Views\Class\Details.cshtml" />
+    <Content Include="Views\Class\RegisterClass.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\User\Models\" />
+    <Folder Include="Areas\User\Views\Company\" />
+    <Folder Include="Areas\User\Views\IndividualUser\" />
+    <Folder Include="Areas\User\Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
