update DomainModel to V0.5

--- a/CourseRegistration.Models/CourseRegistration.Models.csproj
+++ b/CourseRegistration.Models/CourseRegistration.Models.csproj
@@ -58,6 +58,7 @@
     <Compile Include="CompanyHR.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="CourseClass.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="IndividualUser.cs" />
     <Compile Include="Instructor.cs" />
     <Compile Include="Participant.cs" />
