--- a/CourseRegistration.BLL/app.config
+++ b/CourseRegistration.BLL/app.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+	<appSettings>
+		<add key="SmtpClient" value="smtp.gmail.com" />
+		<add key="mailAccount" value="nus.iss.courseregsys@gmail.com" />
+		<add key="mailPassword" value="no-reply" />
+	</appSettings>
   <configSections>
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
