--- a/CourseRegistrationSystem/CourseRegistrationSystem.csproj
+++ b/CourseRegistrationSystem/CourseRegistrationSystem.csproj
@@ -461,6 +461,9 @@
     <Content Include="Views\CompanyHR\EmployeeEdit.cshtml" />
     <Content Include="Views\CompanyHR\EmployeeDetails.cshtml" />
     <Content Include="Views\CompanyHR\EmployeeDelete.cshtml" />
+    <Content Include="Views\Account\LoginIndividualUser.cshtml" />
+    <Content Include="Views\Account\LoginCompanyHR.cshtml" />
+    <Content Include="Views\Account\LoginStaff.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
