--- a/CourseRegistrationSystem/Web.config
+++ b/CourseRegistrationSystem/Web.config
@@ -33,8 +33,10 @@
       </providers>
 
     </siteMap>
-    
-    <authentication mode="None" />
+
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880" />
+    </authentication>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
