--- a/CourseRegistrationSystem/CourseRegistrationSystem.csproj
+++ b/CourseRegistrationSystem/CourseRegistrationSystem.csproj
@@ -278,8 +278,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\BillingViewModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\RegistrationViewModel.cs" />
+    <Compile Include="Models\ParticipantViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
