--- a/CourseRegistration.Service/Web.config
+++ b/CourseRegistration.Service/Web.config
@@ -1,6 +1,14 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-
+  
+  <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=D:\dotNET_CA\CourseRegistrationSystem\App_Data\aspnet-CourseRegistrationSystem-20150415050731.mdf;Initial Catalog=aspnet-CourseRegistrationSystem-20150415050731;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
