--- a/CourseRegistration.Service/CourseRegistration.Service.csproj
+++ b/CourseRegistration.Service/CourseRegistration.Service.csproj
@@ -59,14 +59,21 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AttendanceService.svc" />
     <Content Include="CourseRegistrationService.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CourseRegistrationData.cs" />
+    <Compile Include="AttendanceService.svc.cs">
+      <DependentUpon>AttendanceService.svc</DependentUpon>
+    </Compile>
+    <Compile Include="AttendanceModel.cs" />
+    <Compile Include="EnumModel.cs" />
+    <Compile Include="CourseRegistrationModel.cs" />
     <Compile Include="CourseRegistrationService.svc.cs">
       <DependentUpon>CourseRegistrationService.svc</DependentUpon>
     </Compile>
+    <Compile Include="IAttendanceService.cs" />
     <Compile Include="ICourseRegistrationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
