--- a/CourseRegistration.BLL/CourseRegistration.BLL.csproj
+++ b/CourseRegistration.BLL/CourseRegistration.BLL.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessExcepetion.cs" />
     <Compile Include="CompanyBLL.cs" />
     <Compile Include="EmailService.cs" />
     <Compile Include="InstructorBLL.cs" />
