--- a/CourseRegistration.Service/CourseRegistration.Service.csproj
+++ b/CourseRegistration.Service/CourseRegistration.Service.csproj
@@ -40,6 +40,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Activities" />
+    <Reference Include="System.ServiceModel.Activities" />
+    <Reference Include="System.ServiceModel.Channels" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -55,6 +58,7 @@
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Services" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
@@ -68,6 +72,9 @@
       <DependentUpon>AttendanceService.svc</DependentUpon>
     </Compile>
     <Compile Include="AttendanceModel.cs" />
+    <Compile Include="GetClassRegistrationNumAcitivity.cs" />
+    <Compile Include="ConfirmationActivity.cs" />
+    <Compile Include="CancelationActivity.cs" />
     <Compile Include="CommonModel.cs" />
     <Compile Include="CourseRegistrationModel.cs" />
     <Compile Include="CourseRegistrationService.svc.cs">
@@ -81,6 +88,9 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CourseConfirmationProcess.xamlx">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
