--- a/ConsoleHost/App.config
+++ b/ConsoleHost/App.config
@@ -17,13 +17,13 @@
       <wsHttpBinding>
         <binding name="wsHttp">
           <security mode="Message">
-            <message clientCredentialType="Windows" />            
+            <message clientCredentialType="UserName" />            
           </security>
         </binding>
 
         <binding name="wsHttp1">
           <security mode="Message">
-            <message clientCredentialType="Windows" />
+            <message clientCredentialType="UserName" />
           </security>
         </binding>
       </wsHttpBinding>
@@ -36,7 +36,19 @@
           <serviceMetadata httpGetEnabled="true" />
             <!--The below line will send the actuall reason of exception to the client -->
           <serviceDebug includeExceptionDetailInFaults="true"/>
-         
+          <!--The below line is for Username and Password validation  -->
+          <serviceCredentials>
+            
+            <serviceCertificate findValue="localhost" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName" />
+            <userNameAuthentication
+                 userNamePasswordValidationMode="Custom"
+                 customUserNamePasswordValidatorType= "ConsoleHost.UserNameValidation,ConsoleHost"/>
+            <clientCertificate>
+              <authentication certificateValidationMode="PeerOrChainTrust" revocationMode="NoCheck" />
+            </clientCertificate>
+          
+          </serviceCredentials>
+           
         </behavior>
       </serviceBehaviors>
     </behaviors>
