--- a/ConsoleHost/App.config
+++ b/ConsoleHost/App.config
@@ -17,7 +17,8 @@
       <wsHttpBinding>
         <binding name="wsHttp">
           <security mode="Message">
-            <message clientCredentialType="UserName" />            
+            <message clientCredentialType="UserName"
+                     algorithmSuite="TripleDes"/>            
           </security>
         </binding>
 
