--- a/CourseRegistrationSystem/CourseRegistrationSystem.csproj
+++ b/CourseRegistrationSystem/CourseRegistrationSystem.csproj
@@ -279,6 +279,7 @@
     <Compile Include="Controllers\CompanyHRController.cs" />
     <Compile Include="Controllers\CourseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\IndividualUserController.cs" />
     <Compile Include="Controllers\InstructorController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -479,6 +480,9 @@
     <Content Include="Views\Class\RegisterClassForIUResult.cshtml" />
     <Content Include="Views\Class\RegisterClassForHRResult.cshtml" />
     <Content Include="Views\Course\Search.cshtml" />
+    <Content Include="Views\IndividualUser\PersonalInfoEdit.cshtml" />
+    <Content Include="Views\IndividualUser\RegistrationList.cshtml" />
+    <Content Include="Views\IndividualUser\PersonalInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
