--- a/CourseRegistrationSystem/Areas/SystemAdmin/Web.config
+++ b/CourseRegistrationSystem/Areas/SystemAdmin/Web.config
@@ -2,7 +2,7 @@
 <configuration>
     <system.web>
       <authorization>
-        <allow roles="CourseAdmin"/>
+        <allow roles="SystemAdmin"/>
         <deny users="*"/>
       </authorization>
     </system.web>
