--- a/CourseRegistrationSystem/CourseRegistrationSystem.csproj
+++ b/CourseRegistrationSystem/CourseRegistrationSystem.csproj
@@ -332,6 +332,7 @@
     <Content Include="Areas\CourseAdmin\CourseAdmin.Master" />
     <Content Include="Areas\SystemAdmin\SystemAdmin.Master" />
     <Content Include="Areas\CourseAdmin\Web.config" />
+    <Content Include="Areas\SystemAdmin\Web.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap-datepicker.js" />
     <Content Include="Scripts\bootstrap-datepicker.min.js" />
