--- a/CourseRegistrationSystem/CourseRegistrationSystem.csproj
+++ b/CourseRegistrationSystem/CourseRegistrationSystem.csproj
@@ -510,6 +510,7 @@
     <None Include="Service References\ServiceReference2\CourseConfirmationProcess1.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Views\Class\EditParticipant.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
